--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <textarea cols="46" rows="3" class="textar"></textarea>
         <h3>Priority ;</h3>
         <div>
-          <input type="radio" name="priority" />
-          <input type="radio" name="priority" checked />
-          <input type="radio" name="priority" />
+          <input type="radio" name="priority" class="radio" />
+          <input type="radio" name="priority" class="radio" checked />
+          <input type="radio" name="priority" class="radio" />
           <p>Important</p>
           <p>Normal</p>
           <p>Low</p>
